<resources>
    <string name="app_name">Shopping list</string>

    <!--    Login activity  -->
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    // Kotlin
        <string name="enterEmail">Enter e-mail</string>
        <string name="enterPassword">Enter password</string>
        <string name="validEmailPassword">wrong login or password</string>
        <string name="successfulAuth">Successful authorization</string>

    <!--    Main activity   -->
    <string name="importantBuy">Importance of buying</string>
    <string name="send">Send</string>
    <string name="writeShopList">Please write a shopping list</string>
    <string name="update">Update</string>
    <string name="updated">Updated</string>
    //kotlin
    <string name="succss_saved">Shopping list saved successfully</string>
    <string name="doNotForget">Do not forget to check the list of products for today</string>



    <!--    Adapter     -->
    <string name="No">No</string>
    <string name="enterShopList">Please enter a shopping list</string>
    <string name="Update_shopping_list">Update Shopping list</string>
    <string name="delete">delete</string>
    <string name="deleted">Deleted</string>
    <string name="congratulations">Congratulations on your purchase from Nurislam</string>
    <string name="Bought">Bought</string>
    <string name="DidntBuy">Didn t buy</string>

</resources>